--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@izzygld/seo-meta-nuxt-generator",
   "version": "1.0.0",
-  "description": "A package to generate SEO metadata from a post (NUXT 3)",
+  "description": "SEO Meta Generator for NUXT 3 WPGraphQL Yoast SEO Plugin",
   "main": "index.js",
   "publishConfig": {
     "access": "public"
